--- a/index.html
+++ b/index.html
@@ -1,20 +1,9 @@
-<?php
-/**
- * Decade Street Ekam — Hyderabad
- * Structured Hospitality Investment | Pre-Launch Brochure
- */
-$project_name = "DECADE STREET EKAM";
-$tagline = "A Structured Hospitality Investment";
-$location = "Hyderabad";
-$operator = "Valora Vista";
-$img = 'assets/images';
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?= htmlspecialchars($project_name) ?> — <?= htmlspecialchars($location) ?></title>
+    <title>DECADE STREET EKAM — Hyderabad</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -23,7 +12,7 @@ $img = 'assets/images';
 <body>
     <header class="site-header">
         <a href="#hero" class="header-logo">
-            <img src="<?= $img ?>/ChatGPT_Image_Feb_11__2026__04_20_32_PM-63ebe642-6faa-4377-a818-1d4be356d848.png" alt="Decade Street" class="header-logo-img">
+            <img src="assets/images/ChatGPT_Image_Feb_11__2026__04_20_32_PM-63ebe642-6faa-4377-a818-1d4be356d848.png" alt="Decade Street" class="header-logo-img">
             <span class="header-ekam">EKAM</span>
         </a>
         <nav class="header-nav">
@@ -44,28 +33,28 @@ $img = 'assets/images';
     <div id="fullpage">
         <!-- SECTION 1 — HERO -->
         <section id="hero" class="fp-section fp-hero">
-            <div class="hero-bg" style="background-image: url('<?= $img ?>/702-cc725481-7b78-4f62-bdc9-c4e5624d21a0.png');"></div>
+            <div class="hero-bg" style="background-image: url('assets/images/702-cc725481-7b78-4f62-bdc9-c4e5624d21a0.png');"></div>
             <div class="hero-overlay"></div>
             <div class="hero-content">
-                <img src="<?= $img ?>/ChatGPT_Image_Feb_11__2026__04_20_32_PM-63ebe642-6faa-4377-a818-1d4be356d848.png" alt="Decade Street" class="hero-logo">
+                <img src="assets/images/ChatGPT_Image_Feb_11__2026__04_20_32_PM-63ebe642-6faa-4377-a818-1d4be356d848.png" alt="Decade Street" class="hero-logo">
                 <span class="hero-ekam">EKAM</span>
-                <p class="hero-label">Pre-Launch Phase | <?= htmlspecialchars($location) ?></p>
-                <h1 class="hero-title"><?= htmlspecialchars($project_name) ?></h1>
-                <p class="hero-tagline"><?= htmlspecialchars($tagline) ?></p>
+                <p class="hero-label">Pre-Launch Phase | Hyderabad</p>
+                <h1 class="hero-title">DECADE STREET EKAM</h1>
+                <p class="hero-tagline">A Structured Hospitality Investment</p>
                 <div class="hero-banner">
                     <span>18 Cottages</span>
                     <span>2 Acres</span>
                     <span>Structured Hospitality Model</span>
                 </div>
                 <p class="hero-cta">Own a built asset. Generate income. Exit with clarity.</p>
-                <p class="hero-operator">Operated by <?= htmlspecialchars($operator) ?></p>
+                <p class="hero-operator">Operated by Valora Vista</p>
                 <a href="#concept" class="hero-scroll">Explore ↓</a>
             </div>
         </section>
 
         <!-- SECTION 2 — CONCEPT -->
         <section id="concept" class="fp-section fp-concept">
-            <div class="section-bg" style="background-image: url('<?= $img ?>/elivation-8c8e224f-2559-440c-a2cc-9380c55147ed.png');"></div>
+            <div class="section-bg" style="background-image: url('assets/images/elivation-8c8e224f-2559-440c-a2cc-9380c55147ed.png');"></div>
             <div class="section-content">
                 <span class="section-num">02</span>
                 <h2>The Concept</h2>
@@ -117,19 +106,19 @@ $img = 'assets/images';
 
         <!-- SECTION 4 — OVERVIEW -->
         <section id="overview" class="fp-section fp-overview">
-            <div class="overview-bg" style="background-image: url('<?= $img ?>/90s-8d399499-27af-4cbf-be2c-c64f925acebc.png');"></div>
+            <div class="overview-bg" style="background-image: url('assets/images/90s-8d399499-27af-4cbf-be2c-c64f925acebc.png');"></div>
             <div class="overview-layout">
                 <div class="overview-info">
                     <span class="section-num">04</span>
                     <h2>Project Overview</h2>
                     <div class="overview-grid">
-                        <div class="overview-item"><span class="label">Location</span><span><?= htmlspecialchars($location) ?></span></div>
+                        <div class="overview-item"><span class="label">Location</span><span>Hyderabad</span></div>
                         <div class="overview-item"><span class="label">Land</span><span>2 Acres</span></div>
                         <div class="overview-item"><span class="label">Phase 1</span><span>18 Cottages</span></div>
                         <div class="overview-item"><span class="label">Type</span><span>Hospitality-first</span></div>
                     </div>
                     <p class="overview-amenities">Central Event Plaza + Café</p>
-                    <p class="overview-operator">Operated by <?= htmlspecialchars($operator) ?></p>
+                    <p class="overview-operator">Operated by Valora Vista</p>
                     <ul class="overview-list">
                         <li>Consistent usage</li>
                         <li>Predictable operations</li>
@@ -176,7 +165,7 @@ $img = 'assets/images';
         <!-- SECTION 6 — QUALITY -->
         <section id="quality" class="fp-section fp-alt fp-split">
             <div class="split-img">
-                <img src="<?= $img ?>/70s1-36015b1f-e44b-41ae-a374-07e3d6b35614.png" alt="Cottage exterior">
+                <img src="assets/images/70s1-36015b1f-e44b-41ae-a374-07e3d6b35614.png" alt="Cottage exterior">
             </div>
             <div class="split-content">
                 <span class="section-num">06</span>
@@ -335,21 +324,32 @@ $img = 'assets/images';
 
         <!-- SECTION 14 — CLOSE -->
         <section id="close" class="fp-section fp-close">
-            <div class="close-bg" style="background-image: url('<?= $img ?>/ChatGPT_Image_Feb_11__2026__04_38_08_PM-07bc1809-2e0d-47a0-a0c7-e47fb89d3752.png');"></div>
+            <div class="close-bg" style="background-image: url('assets/images/ChatGPT_Image_Feb_11__2026__04_38_08_PM-07bc1809-2e0d-47a0-a0c7-e47fb89d3752.png');"></div>
             <div class="close-overlay"></div>
             <div class="section-content">
                 <p class="close-text">Decade Street Ekam is built for investors who value clarity, control, and long-term thinking.</p>
-                <h2 class="close-brand"><?= htmlspecialchars($project_name) ?></h2>
-                <p class="close-location"><?= htmlspecialchars($location) ?></p>
-                <p class="close-tagline"><?= htmlspecialchars($tagline) ?></p>
+                <h2 class="close-brand">DECADE STREET EKAM</h2>
+                <p class="close-location">Hyderabad</p>
+                <p class="close-tagline">A Structured Hospitality Investment</p>
             </div>
         </section>
     </div>
 
     <nav class="fp-dots">
-        <?php for ($i = 1; $i <= 14; $i++): ?>
-        <a href="#" class="fp-dot" data-index="<?= $i ?>"></a>
-        <?php endfor; ?>
+        <a href="#" class="fp-dot" data-index="1"></a>
+        <a href="#" class="fp-dot" data-index="2"></a>
+        <a href="#" class="fp-dot" data-index="3"></a>
+        <a href="#" class="fp-dot" data-index="4"></a>
+        <a href="#" class="fp-dot" data-index="5"></a>
+        <a href="#" class="fp-dot" data-index="6"></a>
+        <a href="#" class="fp-dot" data-index="7"></a>
+        <a href="#" class="fp-dot" data-index="8"></a>
+        <a href="#" class="fp-dot" data-index="9"></a>
+        <a href="#" class="fp-dot" data-index="10"></a>
+        <a href="#" class="fp-dot" data-index="11"></a>
+        <a href="#" class="fp-dot" data-index="12"></a>
+        <a href="#" class="fp-dot" data-index="13"></a>
+        <a href="#" class="fp-dot" data-index="14"></a>
     </nav>
 
     <script src="assets/js/main.js"></script>
