--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
         <!-- SECTION 4 — OVERVIEW -->
         <section id="overview" class="fp-section fp-overview">
             <div class="overview-bg" style="background-image: url('assets/images/90s-8d399499-27af-4cbf-be2c-c64f925acebc.png');"></div>
-            <div class="overview-layout">
+            <div class="overview-layout overview-split">
+                <div class="overview-visual">
+                    <img src="assets/images/ChatGPT_Image_Feb_23__2026__06_28_14_AM-1319a581-2f83-40f0-9bd0-14a35879d4c0.png" alt="Decade Street conceptual site plan">
+                    <p class="site-plan-caption">Conceptual layout — not the final design. Final design will differ; the idea remains the same.</p>
+                </div>
                 <div class="overview-info">
                     <span class="section-num">04</span>
                     <h2>Project Overview</h2>
@@ -149,6 +153,7 @@
                     <span class="price">₹20,000</span>
                     <span class="price-unit">per sq. yard</span>
                 </div>
+                <p class="price-options">250 sq. yard & 300 sq. yard options available</p>
                 <p class="price-note">including construction</p>
                 <ul class="inclusions">
                     <li>Undivided share of land</li>
@@ -205,34 +210,41 @@
 
         <!-- SECTION 8 — INVESTOR INCOME -->
         <section id="income" class="fp-section fp-alt fp-income">
-            <div class="section-content wide">
+            <div class="section-content wide income-slide-content">
                 <span class="section-num">08</span>
-                <h2>Investor Income — Conservative Case</h2>
-                <p class="section-subtitle">20% Utilization</p>
-                <div class="income-layout">
-                    <div class="income-col">
-                        <h4>Assumptions</h4>
-                        <ul>
-                            <li>18 cottages</li>
-                            <li>73 days/year</li>
-                            <li>Stay ₹5,000 / Shoot ₹10,000</li>
-                            <li>OpEx ₹60.5L annual</li>
-                        </ul>
+                <h2>Projected Owner Income</h2>
+                <p class="section-subtitle">Conservative & Optimised Scenarios (30% Utilisation)</p>
+                <div class="income-scenarios">
+                    <div class="income-scenario conservative">
+                        <h4>Conservative Scenario</h4>
+                        <div class="revenue-table">
+                            <div class="rev-row"><span>Resort stays</span><span>₹6,05,000</span></div>
+                            <div class="rev-row"><span>House-level shoots</span><span>₹12,10,000</span></div>
+                            <div class="rev-row total"><span>Gross (House Operations)</span><span>₹18,15,000</span></div>
+                        </div>
+                        <p class="opex-note">After Operating Costs (35%): Net pool ₹11,79,750</p>
+                        <p class="owner-share">Owner share (60%): <strong>₹7,07,850</strong> from house operations</p>
+                        <p class="street-share">Street shoot share: <strong>₹33,611</strong> per unit</p>
+                        <div class="total-income">
+                            <p class="total-label">Total Net Income to Unit Owner</p>
+                            <p class="total-value">₹7,41,461 / year</p>
+                            <p class="total-monthly">≈ ₹62,000 / month</p>
+                        </div>
                     </div>
-                    <div class="income-col">
-                        <h4>Per Cottage</h4>
-                        <p>Gross: ₹10,95,000/yr</p>
-                        <p>Project gross: ₹2.25 Cr</p>
-                        <p>Net pool: ₹1.44 Cr</p>
-                    </div>
-                    <div class="income-col highlight-col">
-                        <h4>Your Payout</h4>
-                        <p class="big-num">₹4,80,654</p>
-                        <p class="per-year">per cottage / year</p>
-                        <p class="per-month">→ ₹40,054 / month</p>
+                    <div class="income-scenario optimised">
+                        <h4>Optimised Scenario</h4>
+                        <p class="optimised-intro">Weekend premium pricing, additional shoot days & rate optimisation</p>
+                        <div class="total-income highlight">
+                            <p class="total-label">Optimised Net Income</p>
+                            <p class="total-value">₹8.4 – ₹8.6 Lakhs / year</p>
+                            <p class="total-monthly">≈ ₹70,000 / month</p>
+                        </div>
                     </div>
                 </div>
-                <p class="disclaimer"><sup>*</sup> Conceptual revenue numbers; actuals may vary.</p>
+                <div class="income-footnote">
+                    <p><strong>Assumptions:</strong> 30% utilisation (≈110 days/yr) • 18 cottages • 60% Owner / 40% Operator • Street shoots shared with owners • Destination wedding revenue at plaza level</p>
+                    <p class="disclaimer"><sup>*</sup> Figures are conservative and operationally achievable. Operating expenses deducted before sharing. Actual performance may vary based on utilisation and demand.</p>
+                </div>
             </div>
         </section>
 
